fixed worst layout issues

--- a/frontendmentor/news-homepage-agnar/style.css
+++ b/frontendmentor/news-homepage-agnar/style.css
@@ -171,7 +171,7 @@ hr {
   height: 10em;
 }
 .other__post__text {
-  padding: 0.25em 0;
+  padding: 0.25em 0.5em;
 }
 .other__post__counter {
   font-size: 2rem;
@@ -186,9 +186,10 @@ hr {
   margin-block: 0.75em;
 }
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 800px) {
   body {
-    padding: 8em;
+    padding: 10em;
+    max-width: 1440px;
   }
   header {
     padding-bottom: 4em;
@@ -215,6 +216,17 @@ hr {
   }
   .hero {
     grid-column: 1/3;
+    grid-row: 1/2;
+    display: flex;
+    flex-direction: column;
+  }
+  .hero__content {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1em;
+  }
+  .hero__details {
+    padding-block: 1em;
   }
   .news-section {
     grid-column: 3/4;
@@ -222,9 +234,10 @@ hr {
   .other {
     display: flex;
     grid-column: 1/4;
+    grid-row: 2/3;
   }
   .other__post__img {
-    height: unset;
-    width: 25%;
+    height: auto;
+    /* width: 25%; */
   }
 }
